--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SlidePuzzle</title>
+    <title>SlidePuzzle - Angular | TypeScript | JavaScript</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Angular | TypeScript Web Slide Puzzle Game"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="." />
   </head>
